# multiperspective-drift-detection

./: .gitignore  LICENSE  README-ES.md  README.es.md  README.md  dudas.md  pyproject.toml
conf/: arrival_rate.yml  calendar.yml  control_flow.yml  parameters_multi_ventana.yml  resource_productivity.yml  resource_utilization.yml  service_rate.yml  ventana_eventos.yml  ventana_trazas.yml
conf/logs_simples/: ar_a.yml  cal_a.yml  cal_b.yml  cf_cb.yml  cf_pl.yml  rp_a.yml  ru_a.yml  sr_a.yml
data/01_raw/arrival_rate/AR-A/: ar_a-5000-single.csv
data/01_raw/calendar/: guia_logs.md
data/01_raw/calendar/CAL-A/: cal_a-5000-single.csv
data/01_raw/calendar/CAL-B/: cal_b-5000-single.csv
data/01_raw/control_flow/recurring/: README.md  cb-2500.csv
data/01_raw/control_flow/single/: cb-2500-single.csv  guia_logs.md  pl-2500-single.csv
data/01_raw/resource_productivity/RP-A/: rp_a-5000-single.csv
data/01_raw/resource_utilization/RU-A/: ru_a-5000-single.csv
src/: __init__.py  ajuste_ventana.py  concept_drift_detection.py  config.py  logging_config.py  main_flow.py  metricas.py  registro.py  ventana.py
src/log_generation/arrival_rate/AR-A/: generador.py  guia.md  modelo.bpmn  prosimos_base.json  prosimos_drift.json
src/log_generation/calendar/CAL-A/: generador.py  guia.md  prosimos_base.json  prosimos_drift.json
src/log_generation/calendar/CAL-B/: generador.py  guia.md
src/log_generation/control_flow/: reconstruir_cambio_unico.py
src/log_generation/resource_productivity/Caso_A/: generador_no_drift.py  guia.md  prosimos_base.json
src/perspectivas/: arrival_rate.py  calendar.py  control_flow.py  resource_profiles.py  service_rate.py
tests/: test_perspectivas.py
tests/arrival_rate/: figura_trayectoria.py  optimizacion_ventana.py  params_template.yml  script_arrival_rate.py  script_arrival_rate.sh
tests/calendar/: barrido_ventana.py  figura_trayectoria.py  optimizacion_ventana.py  params_template.yml  script_calendar.py  script_calendar.sh
tests/control_flow/: optimizacion_ventana_temporal.py  optimizacion_ventana_trazas.py  params_template.yml  params_template_trazas.yml  script_control_flow.py  script_control_flow.sh
tests/resource_productivity/: buscar_distribuciones.ipynb  optimizacion_ventana.py  params_template.yml  script_resource_productivity.py  script_resource_productivity.sh
tests/resource_utilization/: optimizacion_ventana.py  params_template.yml  script_resource_utilization.py  script_resource_utilization.sh
tests/service_rate/: optimizacion_ventana.py  params_template.yml  script_service_rate.py
(+20 files in other folders)
