[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = "==3.10.19"
version = "0.1.0"
name = "tfg_mineria_procesos"
description = "Herramienta de minería de procesos multiperspectiva"
readme="README.md"
authors = [
    { name="Gabriel Guevara Muradás", email="gabriel.guevara@rai.usc.es"}
]

dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "prefect>=3.6.19",
    "pyyaml>=6.0.3",
    "notebook",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
    "pandas>=2.3.3",
    "pm4py>=2.7.19.8",
    "scikit-learn>=1.5.2",
    "prosimos~=2.0.6",
    "pix-framework~=0.13.17",
    "graphviz"
]

dev = [
    "optuna>=3.0.0",
    "psutil>=5.8.0",
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0"
]