[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multiperspective-drift"
version = "0.1.0"
description = "Multiperspective concept drift detection framework for process mining"
readme = "README.md"
license = { file = "LICENSE" }
# Desarrollado y validado con Python 3.10.19. Se admite cualquier 3.10.x; no se
# sube a 3.11+ porque las versiones fijadas de pm4py, prosimos y pix-framework
# están comprobadas contra 3.10.
requires-python = ">=3.10,<3.11"
authors = [
    { name = "Gabriel Guevara Muradás", email = "gabriel.guevara@rai.usc.es" },
]
keywords = [
    "process-mining",
    "concept-drift",
    "drift-detection",
    "change-point-detection",
    "event-logs",
    "pm4py",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pm4py>=2.7.19.8",
    "pix-framework~=0.13.17",
    "prosimos~=2.0.6",
    "prefect>=3.6.19",
    "scikit-learn~=1.5.2",
    "pandas>=2.3.3",
    "numpy~=1.26",
    "scipy~=1.15",
    "pyyaml>=6.0.3",
    "seaborn~=0.12.1",
    "graphviz",
    "optuna>=3.0.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
# Herramientas de desarrollo y ejecución de los notebooks de validación.
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
]

[project.urls]
Repository = "https://github.com/Gaboguevaram/multiperspective-drift"

[tool.setuptools]
packages = ["src", "src.perspectivas"]
